--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <nav>
 <h1>My Grocery List</h1>
 	<ul>
-		<li>Gifts</li>
-		<li>Groceries</li>
-		<li>Household Goods</li>
+		<li><a href="#gifts">Gifts</a></li>
+		<li><a href="#groceries">Groceries</a> </li>
+		<li><a href="#goods">Goods</a></li>
 	</ul>
 </nav>
 <body>
