--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 	<title>GroceryApp</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+<h1>To-Do List</h1>
 <nav>
-<h1>My Grocery List</h1>
-	<ul>
+
+	<ul class="breadcrumb">
 		<li><a href="#gifts">Gifts</a></li>
-		<li><a href="#groceries">Groceries</a> </li>
 		<li><a href="#goods">Goods</a></li>
+		<li><a href="#groceries">Groceries</a> </li>
+
 	</ul>
 </nav>
 <body>
 <div class="grocery-app">
 <ul>
-	<h2>Grocery List</h2>
+	<h2 class="app-heading">Grocery List</h2>
 		<li>Milk</li><div class="box"><input type="checkbox" name="checkbox"></div> 
 		<li>Ground Beef</li><div class="box"> <input type="checkbox" name="checkbox"></div>
 		<li>Sugar</li><div class="box"><input type="checkbox" name="checkbox"></div>  
