--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>GroceryApp</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<h1>To-Do List</h1>
+<h1>Make a Grocery List</h1>
 <nav>
 
 	<ul class="breadcrumb">
