--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>GroceryApp</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="js/app.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="js/jquery-2.1.4.min.js"></script>
 
 </head>
 <h1>Make a Grocery List</h1>
