--- a/pages/gifts.html
+++ b/pages/gifts.html
@@ -3,8 +3,8 @@
 <head>
 	<title>GroceryApp</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<script src="js/app.js"></script>
-	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="../js/app.js"></script>
+	<script src="../js/jquery-2.1.4.min.js"></script>
 
 </head>
 <h1>Make a Grocery List</h1>
