--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 
 <body>
+<div class="priority">
+	<h4 class="red">Red = High Priority</h4>
+	<h4 class="orange">Orange = Medium Priority</h4>
+	<h4 class="yellow">Yellow = Low Priority</h4>
+</div>
+
 <div id="page">
 <h1>Make a Grocery List</h1>
 	<div class="items">
