--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</div>
 	<div class="add-section">
 	<div id="newItemButton"><button href="#" id="showForm">New Item</button></div>
-	<form id="newItemForm"></form>
+	<form id="newItemForm">
 	<input type="text" id="itemDescription" placeholder="Add description.." />
 	<input type="submit" id="addButton" value="add" />
 	</form>
